[project]
name = "app"
version = "0.1.0"
description = "demo fastapi application"
authors = [
    { name = "Ajinkya Indulkar", email = "26824103+ajndkr@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.111.1",
    "pillow>=10.4.0",
    "pydantic>=2.8.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.rye.scripts]
# These three options are equivalent:
dev = "uvicorn app:app --reload"
docker-up = "docker compose up"
docker-down = "docker compose down"
